rota delete
